# artifacts/api-server/src/routes/index.ts
@@ -3,10 +3,12 @@ import healthRouter from "./health";
 import tasksRouter from "./tasks";
 import expensesRouter from "./expenses";
 import subscriptionsRouter from "./subscriptions";
+import categoriesRouter from "./categories";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/categories", categoriesRouter);
 router.use("/tasks", tasksRouter);
 router.use("/expenses", expensesRouter);
 router.use("/subscriptions", subscriptionsRouter);
