# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./tasks";
 export * from "./expenses";
 export * from "./subscriptions";
+export * from "./categories";
